--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "https:nimbus.github.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Nimbus Cloud"
